# TubeWatch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  PLAN.md  PROGRESS.md
docs/decisions/: 001-store-cleaned-transcripts-in-sqlite.md
src/tubewatch/: __init__.py  __main__.py  checks.py  cleanup.py  cli.py  exceptions.py  models.py  processing.py  sources.py  state.py
src/tubewatch/integrations/: __init__.py  tubescribe.py
src/tubewatch/storage/: __init__.py  database.py  transcripts.py
src/tubewatch/youtube/: __init__.py  _video.py  channel.py  playlist.py
tests/: test_playlist.py
tests/notebooks/: channel_tester.ipynb  transcript_storage_tester.ipynb
