[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tubewatch"
version = "0.1.0"
description = "A small YouTube source watcher for Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.6.30",
]

[project.scripts]
tubewatch = "tubewatch.cli:main"

[project.optional-dependencies]
notebook = [
    "ipywidgets>=8.0",
    "jupyterlab>=4.0",
]
tubescribe = [
    "TubeScribe @ git+https://github.com/Htunder-Blade/TubeScribe.git@8681acc49d8a897aeff7bea9801869e740109b8d",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tubewatch"]

[tool.hatch.metadata]
allow-direct-references = true
