[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tubewatch"
version = "0.1.0"
description = "A small YouTube source watcher for Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.6.30",
]

[project.scripts]
tubewatch = "tubewatch.cli:main"

[project.optional-dependencies]
notebook = [
    "ipywidgets>=8.0",
    "jupyterlab>=4.0",
]
tubescribe = [
    "TubeScribe @ git+https://github.com/Htunder-Blade/TubeScribe.git@71f16c411c6e62b6353ed64f479099cd0ecceb62",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tubewatch"]

[tool.hatch.metadata]
allow-direct-references = true
